--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
     <title>Document</title>
 </head>
-<h1>Hi</h1>
+<h1>Hi Tee mee </h1>
 <style>
    body{
 	font-family: 'Open Sans',sans-serif;
